--- a/Swift Fun/Base.lproj/Main.storyboard
+++ b/Swift Fun/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina3_5" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,34 +15,58 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Swift_Fun" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello World" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZGA-vE-E7e">
-                                <rect key="frame" x="116" y="229.5" width="88.5" height="21"/>
+                                <rect key="frame" x="162.66666666666666" y="357.66666666666669" width="88.666666666666657" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J3g-hJ-H4q">
-                                <rect key="frame" x="131" y="260.5" width="59" height="30"/>
+                                <rect key="frame" x="177.66666666666666" y="388.66666666666669" width="59" height="30"/>
                                 <state key="normal" title="Hit me :)"/>
                                 <connections>
                                     <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WJc-ua-799"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NjF-dp-VEi">
+                                <rect key="frame" x="157" y="319" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="ixe-iA-AyM"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Crn-QE-bVS">
+                                <rect key="frame" x="157" y="239" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="EcZ-yM-I3F"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="J3g-hJ-H4q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5oQ-8q-Ci3"/>
+                            <constraint firstItem="ZGA-vE-E7e" firstAttribute="top" secondItem="NjF-dp-VEi" secondAttribute="bottom" constant="8.6666666666666856" id="9tf-GR-K5a"/>
+                            <constraint firstItem="NjF-dp-VEi" firstAttribute="top" secondItem="Crn-QE-bVS" secondAttribute="bottom" constant="50" id="AKf-gE-L7R"/>
                             <constraint firstItem="ZGA-vE-E7e" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="FK2-lZ-MeU"/>
+                            <constraint firstItem="Crn-QE-bVS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GYY-VP-MKT"/>
                             <constraint firstItem="ZGA-vE-E7e" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kn5-FH-azI"/>
                             <constraint firstItem="J3g-hJ-H4q" firstAttribute="top" secondItem="ZGA-vE-E7e" secondAttribute="bottom" constant="10" id="uUl-bz-WRx"/>
+                            <constraint firstItem="NjF-dp-VEi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xXT-ka-oaj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="bottomTextField" destination="NjF-dp-VEi" id="Aqa-t7-MAf"/>
                         <outlet property="myLabel" destination="ZGA-vE-E7e" id="JAh-pO-Egt"/>
+                        <outlet property="topTextField" destination="Crn-QE-bVS" id="3ul-1k-Nwm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
